k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: witwizhub-backend-service
spec:
  selector:
    app: witwizhub-backend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
