k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: witwizhub-frontend-service
spec:
  selector:
    app: witwizhub-frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
