k8s/jenkins-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: witwizhub-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: witwizhub-jenkins
  template:
    metadata:
      labels:
        app: witwizhub-jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          ports:
            - containerPort: 8080
            - containerPort: 50000
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          volumeMounts:
            - name: jenkins-storage
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-storage
          persistentVolumeClaim:
            claimName: jenkins-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: witwizhub-jenkins-service
spec:
  selector:
    app: witwizhub-jenkins
  type: LoadBalancer
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
